# mycc

./: Cargo.toml  README.md  tcc.c  test.c  windows.md
src/: c.pest  codegen.rs  compiler.rs  cpp.rs  declarator.rs  expr.rs  lexer.rs  main.rs  moira.rs  optimize.rs  parser.rs  parser_utils.rs  symbols.rs  tacky.rs
src/optimizer/: constants.rs  graph.rs  mod.rs  optimize.rs  reaching_copies.rs  unreachable.rs
src/x64/: gnugen.rs  mod.rs  moira.rs  moira_inst.rs  moiragen.rs  nasmgen.rs  x64gen.rs
