[package]
name = "mycc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
cc = "1.2.15"
clap = { version = "4.5.31", features = ["derive"] }
lazy_static = "1.5.0"
pest = "2.7.15"
pest_derive = "2.7.15"
tempfile = "3.17.1"
thiserror = "2.0.11"
uuid = { version = "1.14.0", features = ["v4"] }
