[package]
name = "mycc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
backtrace = "0.3.74"
bitflags = "2.9.1"
cc = "1.2.15"
clap = { version = "4.5.31", features = ["derive"] }
enum-as-inner = "0.6.1"
fast-float = "0.2.0"
lazy_static = "1.5.0"
log = "0.4.27"
num-traits = "0.2.19"
scopeguard = "1.2.0"
simplelog = "0.12.2"
tempfile = "3.17.1"
thiserror = "2.0.11"
uuid = { version = "1.14.0", features = ["v4"] }
